@@ -1129,13 +1129,6 @@ sub run {
         }
     }
 
-    my @entries = $info->changelog ? $info->changelog->data : ();
-
-    if (@entries == 1) {
-        tag 'new-package-should-not-package-python2-module', $pkg
-          if $pkg =~ /^python-.*(?<!-doc)$/;
-    }
-
     return;
 }
 
