@@ -7,7 +7,7 @@ Enable-Tags-From-Check: apache2, application-not-library, appstream-metadata, au
  debian-source-dir, description, duplicate-files, elpa, fields, filename-length,
  files, gir, group-checks, huge-usr-share, infofiles, init.d, java, lintian,
  manpages, md5sums, menu-format, menus, nmu, obsolete-sites, ocaml,
- patch-systems, phppear, po-debconf, rules, scripts, shared-libs,
+ patch-systems, phppear, po-debconf, python, rules, scripts, shared-libs,
  source-copyright, standards-version, symlinks, systemd, testsuite, triggers,
  udev, upstream-metadata, usrmerge, version-substvars, watch-file
 
