@@ -1,0 +1,1 @@
+W: python-python2 source: new-package-should-not-package-python2-module python-python-python2
