@@ -1,1 +1,0 @@
-W: python-scripts-python2: new-package-should-not-package-python2-module python-scripts-python2
