@@ -25,6 +25,9 @@ lintian (2.5.53) UNRELEASED; urgency=medium
   * checks/fields.pm:
     + [CL] Ensure that python3-foo packages have "Section: python", not
       just python2-foo.  (Closes: #870272)
+  * checks/python.{pm,desc}:
+    + [CL] Split out Python checks from "scripts" check to a new, source
+      check of type "source".
   * checks/scripts.pm:
     + [CL] Correct false positives in
       unconditional-use-of-dpkg-statoverride by detecting "if !" as a
